<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".HomeActivity">

    <!-- Butoane pentru monitorizarea stării pacientului -->
    <Button
        android:layout_marginTop="200dp"
        android:id="@+id/buttonECG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ecg"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonUmiditate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/umiditate"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperatura"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonPuls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/puls"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:layout_marginLeft="110dp"
        android:id="@+id/buttonBack"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/inapoi2" />


</LinearLayout>
